k8s/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: gcr.io/cs3219-peerprep-366617/frontend
          ports:
            - name: http
              containerPort: 80
          resources:
            limits:
              cpu: 30m
              memory: 32Mi
          imagePullPolicy: IfNotPresent
