k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gateway
  name: gateway
spec:
  selector:
    app: gateway
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: user-service
  name: user-service
spec:
  selector:
    app: user-service
  type: ClusterIP
  ports:
    - name: grpc
      port: 4000
      protocol: TCP
      targetPort: grpc
    - name: http
      port: 8081
      protocol: TCP
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: session-service
  name: session-service
spec:
  selector:
    app: session-service
  type: ClusterIP
  ports:
    - name: grpc
      port: 4100
      protocol: TCP
      targetPort: grpc
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: matching-service
  name: matching-service
spec:
  selector:
    app: matching-service
  type: ClusterIP
  ports:
    - name: grpc
      port: 4001
      protocol: TCP
      targetPort: grpc
    - name: http
      port: 8082
      protocol: TCP
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: collab-service
  name: collab-service
spec:
  selector:
    app: collab-service
  type: ClusterIP
  ports:
    - name: grpc
      port: 4003
      protocol: TCP
      targetPort: grpc
    - name: http
      port: 8083
      protocol: TCP
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: question-service
  name: question-service
spec:
  selector:
    app: question-service
  type: ClusterIP
  ports:
    - name: grpc
      port: 4004
      protocol: TCP
      targetPort: grpc
    - name: http
      port: 8084
      protocol: TCP
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: history-service
  name: history-service
spec:
  selector:
    app: history-service
  type: ClusterIP
  ports:
    - name: grpc
      port: 4005
      protocol: TCP
      targetPort: grpc
    - name: http
      port: 8085
      protocol: TCP
      targetPort: http
