k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  labels:
    app: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false" # Set to true once SSL is set up.
spec:
  rules:
    - http:
        paths:
          - path: /(api/.*)
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  name: http

          - path: /(static/.*)
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  name: http

          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  name: http
